# haskell-at-home

./: .gitignore  .gitmodules  base-drv.nix  cabal.project  default.nix  hoppy-pin.json  notes.org  openzwave+centralscene.nix  openzwave-pin.json  openzwave.nix  release.nix  shell.nix  smarthome.cabal  stack.yaml
nix/: nixpkgs-pin.json  nixpkgs.nix
old/: AutoMap.hs  Daemon.hs  UI.hs
old/Internal/: OpenZWave.hs
old/Widgets/: Tree.hs
src/: Api.hs  Client.hs  Client2.hs  Main.hs  ReactiveDaemon.hs  Server.hs  Viewer.hs
src-client/: Client.hs  Client2.hs  ClientApi.hs  Main.hs  ReactiveDaemon.hs
src-console/: Main.hs
src-server/: Main.hs  Server.hs
src/Data/: RoseTree.hs
src/Data/List/: Zipper.hs
src/Data/RoseTree/: .#Zipper.hs  Zipper.hs
src/ReactiveDaemon/: OpenZWave.hs
src/Widgets/: Tree.hs
