name:                smarthome
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/smarthome#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable smarthome
  ghc-options:         -Wall -threaded -dynamic -fno-warn-name-shadowing
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       ReactiveDaemon.OpenZWave
                     -- , ReactiveDaemon  
                     , Api
                     -- , AutoMap
                     -- , Client2
                     , Server
                     -- , Data.RoseTree
                     -- , Data.RoseTree.Zipper
                     -- , Widgets.Tree
                     -- , Internal.OpenZWave
                     -- , Daemon
  default-language:    Haskell2010
  default-extensions:  RecordWildCards
  build-depends:       base >= 4.7 && < 5
                     -- , brick
                     -- , word-wrap
                     -- , vector
                     -- , vty
                     -- , microlens
                     -- , comonad
                     , haskell-openzwave
                     -- , reactive-banana >= 1.2
                     , hoppy-runtime >= 0.3
                     -- , time >= 1.9
--                     , daemons
                     -- , pipes >= 4.3
--                     , cereal
--                     , data-default
                     -- , lens >= 4.16
                     , containers >= 0.5
                     , mtl >= 2.2
                     , pretty >= 1.1

                     , aeson
                     , async
                     , bimap
                     , bytestring
                     , conduit
--                     , horizon
                     , servant
                     , servant-websockets
                     , servant-client
                     , servant-client-core
                     , servant-server
                     , stm
                     , text
                     , wai
                     , warp
                     , websockets