name:                smarthome
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/smarthome#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Api
                     , ReactiveDaemon.OpenZWave
  build-depends:       base >= 4.7 && < 5
                     , haskell-openzwave
                     , hoppy-runtime
                     , containers
                     , mtl
                     , aeson
                     , async
                     , bytestring
                     , conduit
                     , servant
                     , servant-client
                     , servant-client-core
                     , servant-websockets
                     , text
                     , websockets

executable smarthome-console
  ghc-options:         -Wall -threaded -fno-warn-name-shadowing
  hs-source-dirs:      src-console
  main-is:             Main.hs
  -- other-modules:
  build-depends:       base >= 4.7 && < 5
                     , smarthome

                     , aeson
                     , bytestring
                     , containers
                     , http-client
                     , mtl
                     , optparse-generic
                     , servant-client
                     , text

executable smarthome-reactive-client
  ghc-options:         -Wall -threaded -fno-warn-name-shadowing
  hs-source-dirs:      src-client
  main-is:             Main.hs
  other-modules:       Client2
                     , ReactiveDaemon
  build-depends:       base >= 4.7 && < 5
                     , smarthome
                     , haskell-openzwave
                     , reactive-banana
                     , hoppy-runtime
                     , containers
                     , mtl
                     , aeson
                     , async
                     , conduit
--                     , horizon
                     , http-client
                     , lens
                     , servant-websockets
                     , servant
                     , servant-client
                     , servant-client-core
                     , stm
                     , text
                     , websockets

executable smarthome-server
  ghc-options:         -Wall -threaded -fno-warn-name-shadowing
  hs-source-dirs:      src-server
  main-is:             Main.hs
  other-modules:       Server
  default-language:    Haskell2010
  default-extensions:  RecordWildCards
  build-depends:       base >= 4.7 && < 5
                     , smarthome
                     , haskell-openzwave
                     , hoppy-runtime
                     , containers
                     , mtl
                     , aeson
                     , async
                     , conduit
                     , servant-server
                     , stm
                     , text
                     , wai
                     , warp
                     , websockets